--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,8 +1,9 @@
 <h1>Portfolio items</h1>
+<%= link_to 'Create New Item', new_portfolio_path %>
 <% @portfolio_items.each do |portfolio|%>
 	<p><%= portfolio.title %></p>
 	<p><%= portfolio.subtitle %></p>
 	<p><%= portfolio.body %></p>
 	<%= image_tag portfolio.thumb_image unless !portfolio.thumb_image.present?%>
-
+	<%= link_to 'Edit', edit_portfolio_path(portfolio) %>
 <% end %>
