--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Portfolio items</h1>
 <%= link_to 'Create New Item', new_portfolio_path %>
 <% @portfolio_items.each do |portfolio|%>
-	<p><%= portfolio.title %></p>
+	<p><%= link_to portfolio.title, portfolio_path(portfolio) %></p>
 	<p><%= portfolio.subtitle %></p>
 	<p><%= portfolio.body %></p>
 	<%= image_tag portfolio.thumb_image unless !portfolio.thumb_image.present?%>
