--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -6,4 +6,5 @@
 	<p><%= portfolio.body %></p>
 	<%= image_tag portfolio.thumb_image unless !portfolio.thumb_image.present?%>
 	<%= link_to 'Edit', edit_portfolio_path(portfolio) %>
+	<%= link_to 'Destroy', portfolio, method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
