--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -19,13 +19,7 @@
        <%= link_to 'Register' , new_user_registration_path %>
        <%= link_to 'Login' , new_user_session_path %>
        <% end %>
-    <div>
-      <div><%= link_to 'Home', root_path%></div>
-      <div><%= link_to 'About me', about_me_path %></div>
-      <div><%= link_to 'Contact', contact_path %></div>
-      <div><%= link_to 'blogs', blogs_path %></div>
-      <div><%= link_to 'Portfolios', portfolios_path %></div>
-    </div>      
+    <%= render "shared/nav" %>      
     <%= yield %>
     <% if session[:source].present? %>
    <p>Thank for comming fr om <%= session[:source] %></p> 
