--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -20,7 +20,7 @@
        <%= link_to 'Login' , new_user_session_path %>
        <% end %>     
     <%= yield %>
-    <%= render "shared/nav" %> 
+    <%= render "shared/nav", location: "bottom" %> 
     <% if session[:source].present? %>
    <p>Thank for comming fr om <%= session[:source] %></p> 
    <% end %>
