--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -16,8 +16,6 @@
     <%= login_helper %>     
     <%= yield %>
     <%= render "shared/nav", location: "bottom" %> 
-    <% if session[:source].present? %>
-   <p>Thank for comming fr om <%= session[:source] %></p> 
-   <% end %>
+    <%= source_helper("blogs")%>
   </body>
 </html>
