--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -16,8 +16,7 @@
     <%= login_helper %>
     <%= render "shared/nav", location: "top" %>      
     <%= yield %>
-    <% if session[:source].present? %>
-   <p>Thank for comming fr om <%= session[:source] %></p> 
-   <% end %>
+    <%= source_helper("application") %>
+   
   </body>
 </html>
