--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,10 +1,4 @@
 <h1>Portfolio items</h1>
 <%= link_to 'Create New Item', new_portfolio_path %>
-<% @portfolio_items.each do |portfolio|%>
-	<p><%= link_to portfolio.title, portfolio_show_path(portfolio) %></p>
-	<p><%= portfolio.subtitle %></p>
-	<p><%= portfolio.body %></p>
-	<%= image_tag portfolio.thumb_image unless !portfolio.thumb_image.present?%>
-	<%= link_to 'Edit', edit_portfolio_path(portfolio) %>
-	<%= link_to 'Destroy', portfolio, method: :delete, data: { confirm: 'Are you sure?' } %>
-<% end %>
+<%= render partial: 'portfolio', collection: @portfolio_items %>
+	
