--- a/app/views/portfolios/_portfolio.html.erb
+++ b/app/views/portfolios/_portfolio.html.erb
@@ -2,5 +2,5 @@
 	<p><%= portfolio.subtitle %></p>
 	<p><%= portfolio.body %></p>
 	<%= image_tag portfolio.thumb_image unless !portfolio.thumb_image.present?%>
-	<%= link_to 'Edit', edit_portfolio_path(portfolio) %>
-	<%= link_to 'Destroy', portfolio, method: :delete, data: { confirm: 'Are you sure?' } %>
+	<%= link_to 'Edit', edit_portfolio_path(portfolio) if logged_in?(:site_admin) %>
+	<%= link_to 'Destroy', portfolio, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
