--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,11 @@
         <div class="cover-container">
           <%= render "shared/application_nav" %>   
 
-          <%= login_helper %>
+
           <%= yield %>
-          <%= copyright_generator %>
-          <%= source_helper("application")%>
+  <%= render 'shared/application_footer' %>
+           <%= source_helper("application")%>
+  
         </div>
       </div>
     </div>
