--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,18 @@
-<h1>Pages#contact</h1>
-<p><%= number_to_phone "8056756218"%></p>
-<p><%= number_to_currency "100"%></p>
-<p><%= number_to_percentage "80"%></p>
-<p><%= number_with_delimiter "123546521"%></p>
+<h1>Would you like to work together?</h1>
+
+<hr>
+
+
+<div class="row">
+	<div class="col-md-6">
+		<h3>Office Address</h3>
+		<p>Please enter your valid address to show the correct ping point</p>
+		<h3>Phone</h3>
+		<p><%= number_to_phone "000000000000"%></p>
+		<h3>Email</h3>
+		<p>damaldumel@portfolio.com</p>
+	</div>
+	<div class="col-md-6">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d972.1938165684784!2d80.16025978749443!3d12.922160722232192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf770ab101dd7b9d9!2sPetras+Solutions+Private+Limited!5e0!3m2!1sen!2sin!4v1535542037312" width="400" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+	</div>
+</div>
