--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -160,3 +160,17 @@ body {
     width: 55rem;
   }
 }
+
+/*
+ * custom styles
+ */
+.card{
+	margin-top:8rem;
+	color:black;
+}
+.card-body{
+	color:black;
+}
+.auth-links a{
+	color:black;
+}
