--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -134,11 +134,11 @@ body {
 @media (min-width: 40em) {
   /* Pull out the header and footer */
   .masthead {
-    position: fixed;
+    position: absolute;
     top: 0;
   }
   .mastfoot {
-    position: fixed;
+    position: relative;
     bottom: 0;
   }
   /* Start the vertical centering */
@@ -173,4 +173,9 @@ body {
 }
 .auth-links a{
 	color:black;
+}
+.alter-box-custom{
+	margin-top: 8rem;
+	color:black;
+	text-align: left;
 }
