--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="container" style=" margin-top: 8rem;color:black;text-align: left;">
+<div class="container alter-box-custom">
   <div class="jumbotron">
     <div class="row">
       <div class="col-md-8">
