--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,11 +5,11 @@
          <h2>Edit <%= resource_name.to_s.humanize %></h2>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>   
               <%= devise_error_messages! %>
-            <div class="field">
+            <div class="form-group">
               <%= f.label :email %><br />
               <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
             </div>
-            <div class="field">
+            <div class="form-group">
               <%= f.label :name %><br />
               <%= f.text_field :name, autocomplete: "Please enter your name", class: "form-control" %>
             </div>
@@ -17,7 +17,7 @@
               <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
             <% end %>
 
-            <div class="field">
+            <div class="form-group">
               <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
               <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
               <% if @minimum_password_length %>
@@ -26,12 +26,12 @@
               <% end %>
             </div>
 
-            <div class="field">
+            <div class="form-group">
               <%= f.label :password_confirmation %><br />
               <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
             </div>
 
-            <div class="field">
+            <div class="form-group">
               <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
               <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
             </div>
@@ -48,7 +48,6 @@
         <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete,class: "btn btn-danger" %></p>
         <div class="auth-links">
           <%= link_to "Back", :back %>
-
         </div>
       </div>
     </div>
