--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,16 +6,16 @@
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= devise_error_messages! %>
 
-            <div class="field">
+            <div class="form-group">
               <%= f.label :email %><br />
               <%= f.email_field :email, autofocus: true, autocomplete: "email",  class: "form-control" %>
             </div>
 
-            <div class="field">
+            <div class="form-group">
               <%= f.label :name %><br />
               <%= f.text_field :name, autocomplete: "Please enter your name",  class: "form-control" %>
             </div>
-            <div class="field">
+            <div class="form-group">
               <%= f.label :password %>
               <% if @minimum_password_length %>
               <em>(<%= @minimum_password_length %> characters minimum)</em>
@@ -23,7 +23,7 @@
               <%= f.password_field :password, autocomplete: "new-password",  class: "form-control" %>
             </div>
 
-            <div class="field">
+            <div class="form-group">
               <%= f.label :password_confirmation %><br />
               <%= f.password_field :password_confirmation, autocomplete: "new-password",  class: "form-control" %>
             </div>
@@ -31,6 +31,7 @@
             <div class="text-center">
               <%= f.submit "Sign up" , class: "btn btn-success"%>
             </div>
+              <%= render "devise/shared/links", class: "form-control" %>
           <% end %>
       </div>
     </div>
@@ -40,4 +41,4 @@
 
 
 
-<%= render "devise/shared/links" %>
+
