--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -12,19 +12,8 @@
   </head>
 
   <body>
-    <!-- Start of nav -->
-    <div class="blog-masthead">
-      <div class="container">
-        <nav class="nav blog-nav">
-          <a class="nav-link active" href="#">Home</a>
-          <a class="nav-link" href="#">New features</a>
-          <a class="nav-link" href="#">Press</a>
-          <a class="nav-link" href="#">New hires</a>
-          <a class="nav-link" href="#">About</a>
-        </nav>
-      </div>
-    </div>
-    <!-- End of nav -->
+    <%= render 'shared/blog_nav'%>
+ 
     <!-- start of blog header -->
     <div class="blog-header">
       <div class="container">
@@ -36,8 +25,7 @@
    <!-- start of container and row element -->
     <div class="container">
       <div class="row">
-    <!-- start of container and row element -->
-        <%= login_helper %>  
+    <!-- start of container and row element --> 
         <%= yield %>
         <!-- start of sidebar -->
         <div class="col-sm-3 offset-sm-1 blog-sidebar">
