--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -17,8 +17,9 @@
     <!-- start of blog header -->
     <div class="blog-header">
       <div class="container">
-        <h1 class="blog-title">The Bootstrap Blog</h1>
-        <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+        <h1 class="blog-title">My Blogs</h1>
+        <p class="lead blog-description"><%= link_to 'Write a New Blog', new_blog_path if logged_in?(:site_admin) %>
+. </p>
       </div>
     </div>
     <!-- end of blog header -->
@@ -60,7 +61,7 @@
           </div>
         </div>
         <!-- end of sidebar -->
-
+    </div>      
         <!-- start of footer -->
         <footer class="blog-footer">
           <p>Blog template built for <a href="https://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
@@ -69,11 +70,8 @@
           </p>
         </footer>
         <!-- end of footer -->
-
-        <%= render "shared/nav", location: "bottom" %>
-
         <%= source_helper("blogs")%>
-      </div>
+      
     </div>
   </body>
 </html>
