--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,10 +1,10 @@
-<!-- start of sidebar -->
+<!--start of sidebar -->
 <div class="col-sm-3 offset-sm-1 blog-sidebar">
   <div class="sidebar-module sidebar-module-inset">
-    <h4>About</h4>
-    <p>Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+    <h4>About-me</h4>
+    <p>Hi, My name is karthik raj krishnamoorthy and am working as a software engineer in petras solution pvt ltd.I have 2 years of experience in software development.</p>
   </div>
-  <div class="sidebar-module">
+<!--   <div class="sidebar-module">
     <h4>Archives</h4>
     <ol class="list-unstyled">
       <li><a href="#">March 2014</a></li>
@@ -20,14 +20,14 @@
       <li><a href="#">May 2013</a></li>
       <li><a href="#">April 2013</a></li>
     </ol>
-  </div>
+  </div> -->
   <div class="sidebar-module">
     <h4>Elsewhere</h4>
-    <ol class="list-unstyled">
-      <li><a href="#">GitHub</a></li>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">Facebook</a></li>
+    <ol class="list-unstyled social-links">
+      <li><a href="https://github.com/colkar99" target="_blank"><%= fa_icon "github" %></a></li>
+      <li><a href="#" ><%= fa_icon "google" %></a></li>
+      <li><a href="https://www.facebook.com/colkar99" target="_blank"><%= fa_icon "facebook" %></a></li>
     </ol>
   </div>
 </div>
-<!-- end of sidebar -->
+<!-- end of sidebar
