--- a/app/views/portfolios/_portfolio.html.erb
+++ b/app/views/portfolios/_portfolio.html.erb
@@ -1,6 +1,12 @@
-<p><%= link_to portfolio.title, portfolio_show_path(portfolio) %></p>
-	<p><%= portfolio.subtitle %></p>
-	<p><%= portfolio.body %></p>
+<div class="card">
 	<%= image_tag portfolio.thumb_image unless !portfolio.thumb_image.present?%>
-	<%= link_to 'Edit', edit_portfolio_path(portfolio) if logged_in?(:site_admin) %>
-	<%= link_to 'Destroy', portfolio, method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
+	<p class="card-text">
+		<span>
+			<p><%= link_to portfolio.title, portfolio_show_path(portfolio) %></p>
+		</span>
+		<p><%= portfolio.subtitle %></p>
+	</p>
+</div>
+
+
+
