--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,4 +1,8 @@
-<h1>Portfolio items</h1>
-<%= link_to 'Create New Item', new_portfolio_path if logged_in?(:site_admin)%>
-<%= render partial: 'portfolio', collection: @portfolio_items %>
+<div class="album text-muted">
+  	<div class="container">
+    	<div class="row">
+			<%= render partial: 'portfolio', collection: @portfolio_items %>
+		</div>
+	</div>
+</div>
 	
