--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -2,12 +2,8 @@
 <header class="masthead mb-auto">
   <div class="inner">
     <h3 class="masthead-brand">Karthik raj</h3>
-    <nav class="nav nav-masthead justify-content-center">
-      <%= link_to 'Home', root_path , class: 'nav-link active'%>
-      <%= link_to 'About me', about_me_path , class: 'nav-link' %>
-      <%= link_to 'Contact', contact_path, class: 'nav-link' %>
-      <%= link_to 'blogs', blogs_path , class: 'nav-link'%>
-      <%= link_to 'Portfolios', portfolios_path , class: 'nav-link'%>
+    <nav class="nav nav-masthead justify-content-center app_nav">
+      <%= nav_helper 'nav-link','span'%>
       <%= login_helper "nav-link" %>
     </nav>
   </div>
