--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,9 @@
 <h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="row">
+	<div class="col-md-4">
+		<%= image_tag "profile.jpg" , width: 300 , alt: "Profile" %>
+	</div>
+	<div class="col-md-8">
+		<p>Hi ,my name is karthik raj krishnamoorthy am from tamilnadu trichy. And am currently living in chennai. I was a full-stak developer and working in chennai as a sofware engineer</p>
+	</div>
+</div>
