--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
           <%= yield %>
   <%= render 'shared/application_footer' %>
            <%= source_helper("application")%>
+           <%= render "shared/alerts" %>
   
         </div>
       </div>
