refactor alerts into helper methos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
           <%= yield %>
   <%= render 'shared/application_footer' %>
            <%= source_helper("application")%>
-           <%= render "shared/alerts" %>
+           <%= alerts %>
   
         </div>
       </div>
