--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -12,6 +12,8 @@
   </head>
 
   <body>
+               <%= alerts %>
+
     <%= render 'shared/blog_nav'%>
  
     <%= render 'shared/blog_masthead'%>
