--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,7 @@
-
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Welcome to Damadumel.</h1>
-    <p class="lead">Cover is a one-page template for building simple ..</p>
-    <p class="lead">
-      <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary"%>
-    </p>
-  </main>
-
-
-
+<div class="inner cover">
+	<h1 class="cover-heading">Welcome to Damadumel.</h1>
+	<p class="lead">Cover is a one-page template for building simple ..</p>
+	<p class="lead">
+	  <%= link_to "About Me", about_me_path, class: "btn btn-lg btn-secondary"%>
+	</p>
+</div>
