--- a/app/views/comments/_comment_forms.html.erb
+++ b/app/views/comments/_comment_forms.html.erb
@@ -1,4 +1,4 @@
- <% unless current_user.is_a? GuestUser %>
+<!--  <% unless current_user.is_a? GuestUser %>
  	<%= form_for @comment , url: '#' do |f|%>
  		<div class="form-group">
  			<%= f.label :content%>
@@ -6,4 +6,17 @@
  		</div>
  		<%= f.submit 'Post Comment',class: 'btn btn-warning' %>
  	<% end %>
- <% end %>
+ <% end %> -->
+
+
+ 
+<% unless current_user.is_a? GuestUser %>
+  <%= form_for @comment, url: '#' do |f| %>
+    <div class="form-group">
+      <%= f.label :content %>
+      <%= f.text_area :content, class: 'form-control' %>
+    </div>
+
+    <%= f.submit 'Post Comment', class: 'btn btn-primary' %>
+  <% end %>
+<% end %>
