--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,11 +2,17 @@
   <div class="card">
     <div class="card-block">
       <div class="row">
-        <div class="col-md-1">
+        <div class="col-md-2">
+          <%= gravatar_hepler comment.user %>
         </div>
 
-        <div class="col-md-11">
-          <%= comment.content %>
+        <div class="col-md-10">
+          <div>
+            <%= comment.content %>
+          </div>
+          <div class="comment-attribution">
+            Comment posted by - <span class="comment-name-class"><%= comment.user.first_name %></span> <%= distance_of_time_in_words(comment.created_at, Time.now) %> ago
+          </div>
         </div>
       </div>
     </div>
