--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -10,6 +10,17 @@
   </div>
 
   <div class="form-group">
+    <%= form.label :topic_id %>
+    <%= form.collection_select(:topic_id, Topic.all, :id,:title,
+      {
+        selected: blog.topic_id,
+        include_blank: true
+      },
+      class: 'form-controlss'
+    )%>
+  </div>
+
+  <div class="form-group">
     <%= form.text_area :body , class: "form-control",rows: "10",placeholder: "Content"%>
   </div>
 
