--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -21,6 +21,12 @@
   </div>
 
   <div class="form-group">
+    <%= form.radio_button :status, 'draft' %>
+    <%= form.label :status, 'Draft'%>
+    <%= form.radio_button :status, 'published' %>
+    <%= form.label :status, 'Publish the Blog'%>
+  </div>
+  <div class="form-group">
     <%= form.text_area :body , class: "form-control",rows: "10",placeholder: "Content"%>
   </div>
 
